--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,79 +1,32 @@
 <!DOCTYPE html>
-<html lang="">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title Page</title>
+<html>
+ <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>Todo App</title>
+	
+	<!-- Latest compiled and minified Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="main.css">
-	<div class="jumbotron">
-			<div class="container">
-				<h1>TO DO APP</h1>
-				<p>Showing You The Way</p>
-				
-				<table class="table table-striped table-hover">
-					<thead>
-						<tr id="">
-							<th>Name</th>
-							<th>ID</th>
-							<th>Due Date</th>
-							<th>Description</th>
-					</thead>
-					<tbody id="toDoTable">
-						<% for(var i = 0; i < toDo.length; i ++) {%>
-						<tr>
-							<td><%= toDo[i].name %></td>
-							<td><%= toDo[i].dueDate %></td>
-							<td><%= toDo[i].description %></td>
-							<td><button class="btn btn-danger deleteToDo">Delete To Do</button></td>
-						</tr>
-						<% }; %>
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="lars">
-			<div class="container-fluid">							
-				<form class="form-inline" role="form">
-					<div class="form-group">
-						<label class="sr-only" for=""></label>
-						<input type="text" id="name" name="name" class="form-control" id="" placeholder="Task Name">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for=""></label>
-						<input type="text" id="id" name="id" class="form-control" id="" placeholder="Your ID">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for=""></label>
-						<input type="date" id="dueDate" name="dueDate" class="form-control" id="" placeholder="Due Date">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for=""></label>
-						<input type="text" id="description" name="description" class="form-control" id="" placeholder="Description">
-					</div>
-					
+<body class="container">
 
+<div class="jumbotron">
+	<div class="container">
+		<div id="app"></div>
+	</div>
+</div>
 
-					<!-- <div class="form-group">
-						<label class="sr-only" for=""></label>
-						<input type="text" id="gender" name="gender" class="form-control" id="" placeholder="Bear Gender">
-					</div> -->
-					<button type="submit" id="addToDo" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
-	</div>			
-	</head>
-	<body>
-		<h1 class="text-center">Hello World</h1>
+</body>
 
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
-		<!-- Bootstrap JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
- 		<script src="app.js"></script>
-	</body>
+<script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<script src="https://fb.me/react-0.13.3.js"></script>
+<script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+
+<script type="text/jsx" src="app.js"></script>
 </html>
